# fink

./: Cargo.toml  README.md
src/: controller.rs  crdgen.rs  errors.rs  lib.rs  main.rs  metrics.rs  state.rs  utils.rs
src/controller/: mod.rs  pokemon.rs  virtualmachine.rs
yaml/: crd.yaml  pikachu.yaml  test-vm.yaml
