[package]
name = "fink"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[dependencies]
axum = "0.7.3"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
prometheus = "0.13.3"
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
chrono = "0.4.33"
futures = "0.3.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
